err/rivr-rest-peewee.err
Listing '.'...
Listing './bin'...
Compiling './bin/pwiz.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/negotiator'...
Compiling './lib/python3.5/site-packages/negotiator/negotiator.py'...
***   File "./lib/python3.5/site-packages/negotiator/negotiator.py", line 747
    print "========= CONTENT TYPE =============="
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/negotiator-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/peewee-2.10.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/playhouse'...
Listing './lib/python3.5/site-packages/rivr'...
Listing './lib/python3.5/site-packages/rivr/middleware'...
Listing './lib/python3.5/site-packages/rivr/template'...
Listing './lib/python3.5/site-packages/rivr/views'...
Listing './lib/python3.5/site-packages/rivr-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/rivr_peewee'...
Listing './lib/python3.5/site-packages/rivr_peewee/tests'...
Listing './lib/python3.5/site-packages/rivr_peewee-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/rivr_rest'...
Listing './lib/python3.5/site-packages/rivr_rest/deserialization'...
Listing './lib/python3.5/site-packages/rivr_rest/tests'...
Listing './lib/python3.5/site-packages/rivr_rest/tests/deserialization'...
Listing './lib/python3.5/site-packages/rivr_rest-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/rivr_rest_peewee'...
Listing './lib/python3.5/site-packages/rivr_rest_peewee/tests'...
Listing './lib/python3.5/site-packages/rivr_rest_peewee-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
